--- a/components/MobileNav/MobileNav.module.css
+++ b/components/MobileNav/MobileNav.module.css
@@ -3,6 +3,15 @@
     flex-direction: column;
 }
 
+.closed_menu {
+    padding: 1.5rem;
+}
+
+.closed_menu button {
+    border: none;
+    background: none;
+}
+
 @media only screen and (min-width: 450px) {
     .container {
         display: none;
