--- a/components/MobileNav/MobileNav.module.css
+++ b/components/MobileNav/MobileNav.module.css
@@ -14,6 +14,14 @@
 	margin-bottom: 4rem;
 }
 
+.opened_menu {
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
+	background-color: white;
+	z-index: 1;
+}
+
 .opened_menu .nav_links {
 	margin: 0;
 	padding: 0;
