--- a/components/Links/Links.module.css
+++ b/components/Links/Links.module.css
@@ -31,6 +31,7 @@
         gap: 1rem;
         align-items: center;
         list-style: none;
+        margin-top: 3rem;
     }
     
     .container .nav_item {
