--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -14,7 +14,7 @@
     font-weight: 200;
     text-align: center;
     padding: 2rem 0;
-    background-color: black;
-    color: white;
+    background-color: #F5F5F5;
+    color: #6B6B6B;
     margin-top: auto;
 }
