--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -1,5 +1,40 @@
-.placeholder {
-    font-weight: 600;
-    font-size: 1.5rem;
-    padding: 3rem;
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 1rem;
+    justify-items: center;
+    gap: 0px;
+    margin-top: 2rem;
+}
+
+.project_card {
+    margin-bottom: 2rem;
+}
+
+.horizontal_bar h2 {
+    font-size: 1.7rem;
+    margin: 0;
+}
+
+.horizontal_bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+
+.description {
+    opacity: 60%;
+}
+
+.skills {
+    font-size: 0.7rem;
+    word-spacing: 1rem;
+    opacity: 50%;
+}
+
+@media only screen and (max-width: 1100px) {
+	.container {
+        grid-template-columns: 1fr;
+	}
 }
