--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -1,22 +1,19 @@
 .container {
     display: grid;
-    grid-template-columns: fit-content(600px) fit-content(600px);
-    width: max-content;
-    margin: auto;
-    padding: 1rem;
+    grid-template-columns: 1fr; 
+    margin: 1rem auto 2rem auto;
+    column-gap: 4rem;
+    row-gap: 3rem;
+    padding: 2rem;
     justify-items: center;
-    column-gap: 5rem;
-    margin-top: 2rem;
-}
-
-.image_container {
-    position: relative;
-    width: 500px;
-    height: 281px;
 }
 
 .project_card {
-    margin-bottom: 3rem;
+    width: 100%;
+}
+
+.image_container {
+    width: 100%;
 }
 
 .horizontal_bar h2 {
@@ -41,22 +38,14 @@
     opacity: 50%;
 }
 
-@media only screen and (max-width: 400px) {
-    .image_container {
-        width: 200px;
-        height: 113px;
-    }
-} 
-
-@media only screen and (max-width: 550px) {
-    .image_container {
-        width: 300px;
-        height: 169px;
+@media only screen and (min-width: 450px) {
+    .container {
+        width: 80%;
     }
 }
 
-@media only screen and (max-width: 1200px) {
-	.container {
-        grid-template-columns: 1fr;
-	}
+@media only screen and (min-width: 820px) {
+    .container {
+        grid-template-columns: 1fr 1fr;
+    }
 }
