--- a/components/SkillsTable/SkillsTable.module.css
+++ b/components/SkillsTable/SkillsTable.module.css
@@ -1,5 +1,26 @@
 .container {
-    display: grid;
-    background-color: red;
-    border: 2px solid black;    
+	display: grid;
+	background-color: #fdfdfd;
+	grid-template-columns: repeat(auto-fit, 186px);
+	justify-content: center;
+	align-items: center;
+	border-radius: 2rem;
+	padding: 2rem;
+	gap: 2rem;
+}
+
+.skill_box {
+	font-weight: 300;
+	text-align: center;
+	padding: 2rem;
+	box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
+		rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+	border-radius: 1rem;
+}
+
+@media only screen and (min-width: 450px) {
+	.container {
+		max-width: 60%;
+		margin: auto;
+	}
 }
