--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1,10 +1,12 @@
 .section {
-    padding: 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem; 
+    margin-bottom: 4rem;
 }
 
 .section_header {
     text-align: center;
     font-size: 1.5rem;
-    margin-bottom: 2rem;
     color: #505050;
+    font-weight: 500;
 }
