Fix padding issue when viewing projects as well & change green shade for progress bars

--- a/components/SkillsTable/ProgressBar/ProgressBar.module.css
+++ b/components/SkillsTable/ProgressBar/ProgressBar.module.css
@@ -4,7 +4,7 @@
 }
 
 .progress {
-    background-color: #06FF00;
+    background-color: #3CB043;
     height: 0.8rem;
     border-radius: 1rem;
     transition: 1s ease;
