--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -4,7 +4,7 @@
 	margin: 1rem auto 2rem auto;
 	column-gap: 8rem;
 	row-gap: 3rem;
-	padding: 2rem;
+	padding: 2rem 4rem;
 	justify-items: center;
 }
 
